remove container to display on full screen

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@ s -->
     <![endif]-->
     <!-- Add your site or application content here -->
     <header-side> </header-side>
-    <div class="container" style="min-height: 700px;">
+    <div style="min-height: 700px; padding: 0 5rem;">
         <div ng-view=""></div>
     </div>
     <footer-side> </footer-side>
